# zenresize

./: .gitignore  BENCHMARKS.txt  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  Cargo.toml.original.txt  Cross.toml  FEEDBACK.md  README.crates.md  README.md  TILED_VFILTER_ANALYSIS.md  TODO.md  build.rs  justfile  perf.data  perf.data.old
.claude/worktrees/: zenlayout
.github/workflows/: ci.yml
apidoc/: Cargo.toml
benches/: cachegrind_vfilter.rs  competitors_zen.rs  composite_bench.rs  composite_e2e.rs  ff_vs_stream_zen.rs  fullframe_vs_streaming.rs  paired_bench.rs  planar_bench.rs  plot_sweep.py  precision.rs  profile_f16.rs  profile_f32.rs  profile_linear.rs  profile_srgb.rs  profile_streaming.rs  resize_bench.rs  sweep_bench.rs  tango_bench.rs  tiled_bench.rs  transfer_bench.rs
benchmarks/: README.md  arm_n1_f16_archmage_vs_pr9_2026-06-03.md  arm_neoverse_n1_baseline_2026-05-31.md  arm_neoverse_n1_competitors_after_2026-05-31.txt  arm_neoverse_n1_competitors_before_2026-05-31.txt  f16_convert_neon_fp16_2026-06-01.md  transfer_bench_2026-03-04.csv
docs/: investigation-sharpness-metric.txt
docs/public-api/: ABLATION-zenresize.md  zenresize.features.txt  zenresize.internal.txt  zenresize.txt
examples/: debug_same_size.rs
src/: blur.rs  color.rs  composite.rs  execute.rs  fastmath.rs  filter.rs  fit.rs  layout.rs  lib.rs  pixel.rs  plane.rs  proven.rs  resize.rs  streaming.rs  transfer.rs  weights.rs  working.rs  zennode_defs.rs  zenode_defs.rs
src/simd/: mod.rs  neon.rs  scalar.rs  tf_portable.rs  wasm128.rs  wide_kernels.rs  x86.rs
tests/: allocating_padding.rs  alpha_transition_zone.rs  cross_format.rs  dispatch_tiers.rs  golden_outputs.rs  integration.rs  public_api_doc.rs  real_vs_synth.rs  size_ratio_stress.rs  unpremul_threshold.rs  vs_palette.rs  vs_zenlayout.rs  weights.txt
