[package]
name = "zenresize"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-or-later"
description = "High-quality image resampling with 31 filters, streaming API, and SIMD acceleration"
repository = "https://github.com/imazen/zenresize"
keywords = ["image", "resize", "resampling", "simd", "lanczos"]
categories = ["graphics", "multimedia::images", "no-std"]

[features]
default = ["std"]
std = ["archmage/std", "linear-srgb/std", "wide/std"]
avx512 = ["archmage/avx512"]
imgref = ["dep:imgref", "dep:rgb"]
# Enable SIMD features on pic-scale for benchmarks (default: scalar-only)
bench-simd-competitors = ["pic-scale/sse", "pic-scale/avx", "pic-scale/rdm"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512", "bench-simd-competitors"))'] }

[dependencies]
archmage = { version = "0.6", path = "../archmage", default-features = false, features = ["macros"] }
linear-srgb = { version = "0.4", path = "../linear-srgb", default-features = false }
safe_unaligned_simd = "0.2.4"
wide = { version = "1.1", default-features = false }
imgref = { version = "1.12", optional = true }
rgb = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tango-bench = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Competitors (pic-scale: SIMD controlled by bench-simd-competitors feature)
pic-scale = { version = "0.6", default-features = false, features = ["colorspaces"] }
fast_image_resize = "6"
resize = "0.8"
rgb = "0.8"

[[bench]]
name = "resize_bench"
harness = false

[[bench]]
name = "paired_bench"
harness = false

[[bench]]
name = "profile_srgb"
harness = false

[[bench]]
name = "sweep_bench"
harness = false

[[bench]]
name = "tango_bench"
harness = false
