[package]
name = "zenresize"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-or-later"
description = "High-quality image resampling with 31 filters, streaming API, and SIMD acceleration"
repository = "https://github.com/imazen/zenresize"
keywords = ["image", "resize", "resampling", "simd", "lanczos"]
categories = ["graphics", "multimedia::images", "no-std"]

[features]
default = ["std", "layout"]
std = ["archmage/std", "magetypes/std", "linear-srgb/std", "wide/std", "zenlayout?/std", "zenpixels/std", "whereat/std", "zenblend/std"]
avx512 = ["archmage/avx512"]
layout = ["dep:zenlayout"]
# Enable SIMD features on pic-scale for benchmarks (default: scalar-only)
bench-simd-competitors = ["pic-scale/sse", "pic-scale/avx", "pic-scale/rdm"]
pretty-safe = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512", "bench-simd-competitors", "pretty-safe"))'] }

[dependencies]
archmage = { version = "0.9.12", default-features = false, features = ["macros"] }
magetypes = { version = "0.9.12", default-features = false }
zenlayout = { version = "0.2", default-features = false, optional = true }
linear-srgb = { version = "0.6.4", default-features = false, features = ["transfer"] }
safe_unaligned_simd = "0.2.5"
wide = { version = "1.1", default-features = false }
zenpixels = { version = "0.1", default-features = false }
imgref = "1.12"
libm = { version = "0.2", default-features = false }
rgb = { version = "0.8", default-features = false }
whereat = { version = "0.1.4", default-features = false }
zenblend = { version = "0.1.0", path = "../zenblend", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tango-bench = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
linear-srgb = "0.6.4"
colorutils-rs = "0.7"

# Competitors (pic-scale: SIMD controlled by bench-simd-competitors feature)
pic-scale = { version = "0.7", default-features = false, features = ["colorspaces"] }
pic-scale-safe = "0.1"
fast_image_resize = "6"
zenbench = { path = "/home/lilith/work/zen/zenbench" }
zenblend = { path = "../zenblend" }
resize = "0.8"
rgb = "0.8"
palette = "0.7"

[[bench]]
name = "resize_bench"
harness = false

[[bench]]
name = "paired_bench"
harness = false

[[bench]]
name = "profile_srgb"
harness = false

[[bench]]
name = "sweep_bench"
harness = false

[[bench]]
name = "tango_bench"
harness = false

[[bench]]
name = "profile_linear"
harness = false

[[bench]]
name = "precision"
harness = false

[[bench]]
name = "profile_f32"
harness = false

[[bench]]
name = "profile_streaming"
harness = false

[[bench]]
name = "profile_f16"
harness = false

[[bench]]
name = "planar_bench"
harness = false

[[bench]]
name = "transfer_bench"
harness = false

[[bench]]
name = "tiled_bench"
harness = false

[[bench]]
name = "cachegrind_vfilter"
harness = false

[[bench]]
name = "fullframe_vs_streaming"
harness = false

[[bench]]
name = "ff_vs_stream_zen"
harness = false

[[bench]]
name = "competitors_zen"
harness = false

[[bench]]
name = "composite_bench"
harness = false

[[bench]]
name = "composite_e2e"
harness = false

[profile.test]
opt-level = 2

[profile.dev]
opt-level = 1
