[package]
name = "zenresize"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "High-quality image resampling with 31 filters, streaming API, and SIMD acceleration"
repository = "https://github.com/imazen/zenresize"
keywords = ["image", "resize", "resampling", "simd", "lanczos"]
categories = ["graphics", "multimedia::images", "no-std"]
include = ["/src/**", "/tests/**", "/benches/**", "/README.md", "/CHANGELOG.md", "/LICENSE*", "/build.rs"]

[features]
default = ["std"]
std = ["archmage/std", "magetypes/std", "linear-srgb/std", "zenpixels/std", "whereat/std", "zenblend/std"]
avx512 = ["archmage/avx512"]
# zennode node definitions (Constrain schema with RIAPI keys)
# zennode = ["dep:zennode"]
# Enable SIMD features on pic-scale for benchmarks (default: scalar-only)
bench-simd-competitors = ["pic-scale/sse", "pic-scale/avx", "pic-scale/rdm"]
pretty-safe = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512", "bench-simd-competitors", "pretty-safe"))'] }

[dependencies]
archmage = { version = "0.9.15", default-features = false, features = ["macros"] }
magetypes = { version = "0.9.15", default-features = false }
linear-srgb = { version = "0.6.11", default-features = false, features = ["transfer"] }
safe_unaligned_simd = "0.2.5"
zenpixels = { version = "0.2.10", default-features = false }
imgref = "1.12"
libm = { version = "0.2", default-features = false }
rgb = { version = "0.8", default-features = false }
whereat = { version = "0.1.5", default-features = false }
zenblend = { version = "0.1.0", default-features = false }
# Self-documenting node definitions for pipeline integration
# zennode = { version = "0.1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
linear-srgb = { version = "0.6.11" }
colorutils-rs = "0.7"
zenblend = { version = "0.1.0" }
rgb = "0.8"
# Reference implementation for fit/within/cover constraint-solver parity tests
# (tests/vs_zenlayout.rs). zenresize is a planned replacement for zenlayout's
# constraint solver — brute-force testing guarantees we match bit-for-bit.
zenlayout = "0.2"

# Native-only: benchmark dependencies that don't compile for wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tango-bench = "0.7"
pic-scale = { version = "0.7", default-features = false, features = ["colorspaces"] }
pic-scale-safe = "0.1"
fast_image_resize = "6"
zenbench = { version = "0.1.2", features = ["criterion-compat"] }
resize = "0.8"
palette = "0.7"

[[bench]]
name = "resize_bench"
harness = false

[[bench]]
name = "paired_bench"
harness = false

[[bench]]
name = "profile_srgb"
harness = false

[[bench]]
name = "sweep_bench"
harness = false

[[bench]]
name = "tango_bench"
harness = false

[[bench]]
name = "profile_linear"
harness = false

[[bench]]
name = "precision"
harness = false

[[bench]]
name = "profile_f32"
harness = false

[[bench]]
name = "profile_streaming"
harness = false

[[bench]]
name = "profile_f16"
harness = false

[[bench]]
name = "planar_bench"
harness = false

[[bench]]
name = "transfer_bench"
harness = false

[[bench]]
name = "tiled_bench"
harness = false

[[bench]]
name = "cachegrind_vfilter"
harness = false

[[bench]]
name = "fullframe_vs_streaming"
harness = false

[[bench]]
name = "ff_vs_stream_zen"
harness = false

[[bench]]
name = "competitors_zen"
harness = false

[[bench]]
name = "composite_bench"
harness = false

[[bench]]
name = "composite_e2e"
harness = false

[package.metadata.superwork.ci]
strategy = "strip_path"

[profile.test]
opt-level = 2

[profile.dev]
opt-level = 1
